--- a/firstapp/public/styles/styles.css
+++ b/firstapp/public/styles/styles.css
@@ -2,3 +2,11 @@ h1{
     background-color: rgb(34, 121, 34);
     color: rgb(248, 18, 18);
 }
+
+#form{
+    padding: 50px;
+}
+
+#form th, #form td{
+    padding: 5px;
+}
